# calisthenics-workout-tracker

./: .dockerignore  .easignore  .gitignore  .secrets.baseline  CHANGELOG.md  LICENSE  Makefile  README.md  change-env.sh  clean-node-modules.sh  display-logs.py  eas.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json  web-build.sh
.eas/workflows/: create-development-builds.yml
.husky/: post-commit  pre-commit
apps/backend/: .dockerignore  .env.example  .flake8  .gitignore  .secrets.baseline  Dockerfile.dev  Makefile  config.py  main.py  package.json  pyproject.toml  railway.json  railway.toml
apps/backend/app/: config.py  conftest.py  dependencies.py  main.py  test_main.py
apps/backend/app/api/: main.py
apps/backend/app/api/routes/: exercises.py  leveragesAssists.py  setProgressions.py  workout.py
apps/backend/app/api/utils/: exercises.py  leveragesAssists.py  setProgressions.py  workout.py
apps/backend/app/core/: config.py  dependencies.py
apps/backend/app/mocks/: workout_build_row.json  workout_builds_rows.json  workout_logs_rows.json
apps/backend/app/schemas/: exercise.py  leveragesAssists.py  setProgressions.py  workout.py
apps/backend/app/services/: supabase_client.py
apps/backend/mocks/: workout_build_row.json  workout_build_rows_response.json  workout_builds_rows.json  workout_logs_rows.json
apps/backend/tests/: conftest.py  test_main.py
apps/backend/tests/api/: test_workout_router.py
apps/backend/tests/routes/: test_workout_router.py
apps/backend/tests/utils/: test_workout_utils.py
apps/mobile/: App.tsx  Dockerfile.dev  package.json  pnpm-lock.yaml
apps/web/: .dockerignore  Dockerfile.dev  package.json  pnpm-lock.yaml  tsconfig.json
backup/mobile-bak/: .dockerignore  .prettierignore  App.tsx  package.json
docs/: exercises_schema.sql  public-release-security-checklist.md  sample_workout_build_workout_data.json  sample_workout_log_workout_data.json  workout_data_json_schema_v2.json  workout_data_json_schema_v3.json
(+579 files in other folders)
