[project]
name = "cwt-api"
version = "1.0.0"
description = ""
authors = [
    {name = "Fatima Camero",email = "54559570+timamero@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"

dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
