[project]
name = "backend"
version = "0.1.0-alpha.1"
description = ""
authors = [
    {name = "Fatima Camero",email = "54559570+timamero@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
package-mode = false

dependencies = [
    "fastapi (>=0.136.3,<0.137.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "cachetools (>=6.1.0,<7.0.0)",
    "supabase (>=2.17.0,<3.0.0)",
    "fastapi-limiter (>=0.2.0,<0.3.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.2.0"
black = "^25.1.0"
pytest = "^8.4.0"
httpx2 = "^2.3.0"

pytest-asyncio = "^1.4.0"

[tool.poetry.dependencies]
fastapi = {allow-prereleases = true}
[tool.black]
line-length = 88
target-version = ['py313']
skip-string-normalization = false

